--- a/style.css
+++ b/style.css
@@ -21,17 +21,22 @@ html {
 
 .outputs {
   border-bottom: 2px solid rgb(95, 94, 94);
-  padding: 1rem;
+  padding: 1rem 0;
   width: 100%;
 }
 
 .title-input,
-.author-input,
-.title-show,
-.author-show {
+.author-input {
   font-size: 1.5rem;
   margin: 1.5rem 0;
   padding: 1rem;
+}
+
+.title-show,
+.author-show {
+  margin: 0;
+  padding: 0.5rem 0;
+  font-size: 1.5rem;
 }
 
 .add-btn,
