--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ html {
   font-size: 62.5%;
 }
 
+ul {
+  list-style: none;
+}
+
 .main-data {
   padding: 3rem;
   width: 60%;
@@ -59,4 +63,12 @@ input::placeholder {
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
+}
+
+.lst {
+  order: 2;
+}
+
+.inputs {
+  order: 1;
 }
